@@ -4,8 +4,11 @@ update-manager (1:0.59.12) feisty; urgency=low
     - set debian frontend to "kde"
   * DistUpgrade/DistUpgradeCache.py:
     - do not crash when uname -r can't be parsed (LP#97663)
+    - remove the nfs upgrade question again, the kernel team
+      fix the regression
   * DistUpgrade/DistUpgradeApport.py:
     - do not crash if no apport gui is available (LP#97498)
+  
 
  --
 
